--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -13,7 +13,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "http://localhost:5054",
+        "applicationUrl": "https://localhost:7233;http://localhost:5054",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
